# presence-rx

./: .cursorrules  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  codex.md  index.html  pm-dashboard.html  pyproject.toml
.agent-context/: ARTIFACTS.md  DECISIONS.md  GLOSSARY.md  GROUND_TRUTH.md  INDEX.md  LANES.md  ONBOARDING.md  OVERVIEW.md
.githooks/: pre-commit
config/: attio.json  brands.json
docs/: ANALYTICS_PATTERNS_FOR_PEEC.md  ARTIFACT_CONTRACTS.md  CAMPAIGN_TAXONOMY_FOR_PEEC.md  DEMO_SCRIPT.md  DESIGN_TOKENS.md  END_TO_END_BUILD_GUIDE_AND_STORYBOARD.md  FUTURE_DIRECTIONS.md  HERO_FEATURE_ORGANIZATION.md  INTEGRATION_CHECKLIST.md  MARKETING_DEMOS.md  METHOD_GUARDRAILS_AND_EVIDENCE.md  PARENT_TOPIC_AND_UNSUPERVISED_PATTERNS.md  PEEC_MCP_EXPLORATION.md  PEEC_MCP_TOOL_MAP.md  PEEC_PM_VISUAL_BOARD.md  PLANNING_AND_MEASUREMENT_PATTERNS.md  PUBLIC_SAFETY_CHECKLIST.md  SCOPE_FINAL.md  SUBMISSION_ARCHITECTURE.md  SUBMISSION_VIDEO_SCRIPT.md  TERMINOLOGY.md  TREND_ECON_PATTERNS.md  VALIDATION_REPORT.md  design.md  submission-architecture.html
notebooks/: 01_presence_rx_pipeline_demo.ipynb
presence_rx/: __init__.py  analyze_gemini.py  brand_config.py  build_action_brief.py  build_activation_brief.py  build_challenged_claims.py  build_competitor_landscape.py  build_evidence_ledger.py  build_mvp_dashboard.py  build_value_metrics.py  build_verdict.py  classify_gaps.py  contracts.py  display_labels.py  enrich_tavily.py  ingest_peec.py  plan_prescriptions.py  run_mvp.py  synthesize_gemini_analysis.py  validate.py
scripts/: capture_demo_assets.mjs  record_demo_webp.mjs
tests/: test_analyze_gemini.py  test_behavioral.py  test_build_action_brief.py  test_build_activation_brief.py  test_build_evidence_ledger.py  test_build_verdict.py  test_challenged_claims.py  test_classify_gaps.py  test_contracts.py  test_enrich_tavily.py  test_ingest_peec.py  test_manifest_update.py  test_multi_brand.py  test_plan_prescriptions.py  test_public_hygiene.py  test_terminology.py  (+1 more)
(+32 files in other folders)
