[project]
name = "presence-rx"
version = "0.1.0"
description = "Presence Rx data pipeline skeleton for the Peec AI hackathon track."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai==1.73.1",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "tavily-python==0.7.23",
    "typer>=0.15.1",
]

[project.scripts]
presence-rx-analyze-gemini = "presence_rx.analyze_gemini:run"
presence-rx-build-challenged-claims = "presence_rx.build_challenged_claims:run"
presence-rx-build-evidence-ledger = "presence_rx.build_evidence_ledger:run"
presence-rx-build-competitor-landscape = "presence_rx.build_competitor_landscape:run"
presence-rx-build-mvp-dashboard = "presence_rx.build_mvp_dashboard:run"
presence-rx-build-value-metrics = "presence_rx.build_value_metrics:run"
presence-rx-classify-gaps = "presence_rx.classify_gaps:run"
presence-rx-enrich-tavily = "presence_rx.enrich_tavily:run"
presence-rx-ingest-peec = "presence_rx.ingest_peec:main"
presence-rx-plan-prescriptions = "presence_rx.plan_prescriptions:main"
presence-rx-run-mvp = "presence_rx.run_mvp:run"
presence-rx-synthesize-gemini = "presence_rx.synthesize_gemini_analysis:run"
presence-rx-build-verdict = "presence_rx.build_verdict:run"
presence-rx-build-action-brief = "presence_rx.build_action_brief:run"
presence-rx-build-activation-brief = "presence_rx.build_activation_brief:run"
presence-rx-validate = "presence_rx.validate:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["presence_rx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"presence_rx/build_mvp_dashboard.py" = ["E501"]
